-fixed css overflow tables

--- a/public/css/finallayout.css
+++ b/public/css/finallayout.css
@@ -655,6 +655,10 @@ input[type=checkbox], input[type=radio]{
   flex-basis: 10%;
 }
 
+.displayTable {
+  height: 85vh;
+  overflow: auto;
+}
 
 /* MY PAPERS END */
 
